<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary"
    tools:context="pl.plantoplate.ui.login.LoginActivity">

    <TextView
        android:layout_marginTop="70dp"
        android:id="@+id/plantoplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"

        android:fontFamily="@font/quicksand_semibold"

        android:gravity="top"
        android:text="@string/plantoplate"
        android:textAppearance="@style/plantoplate"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/rejestracja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"

        android:fontFamily="@font/quicksand_regular"

        android:text="@string/logowanie"
        android:textAppearance="@style/rejestracja"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantoplate"
        app:layout_constraintVertical_bias="0.077" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_imie"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginTop="68dp"

        android:fontFamily="@font/quicksand_regular"

        android:hint="@string/wprowadz_email"
        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"

        app:hintTextColor="?attr/colorSecondaryVariant"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejestracja"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_mail"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:maxLines="1"
            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_haslo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"

        android:layout_marginTop="44dp"
        android:fontFamily="@font/quicksand_regular"

        android:hint="@string/wprowadz_haslo"

        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"

        app:endIconMode="password_toggle"

        app:endIconTint="?attr/colorSecondaryVariant"
        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_imie"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_pass"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:inputType="textPassword"

            android:maxLines="1"
            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/przyp_haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#00FFFFFF"

        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/przypomnij_haslo"
        android:textAppearance="@style/masz_konto_"

        android:textColor="@color/text_clikable_no_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wprowadz_haslo"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/nie_masz_konta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textSize="16dp"

        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/nie_masz_konto_"
        android:textAppearance="@style/masz_konto_"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zaloguj_sie"
        app:layout_constraintVertical_bias="0.328" />

    <Button
        android:id="@+id/button_zaloguj_sie"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"


        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"

        android:text="@string/zalogowanie"
        android:textAllCaps="false"

        android:textColor="?attr/colorSecondaryVariant"

        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_haslo"
        app:layout_constraintVertical_bias="0.292"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
