...
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zaloz_konto"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/button_zaloz_konto"
        android:layout_width="236dp"
        android:layout_height="70dp"
...
